# g16

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
circuit_component_macro/: Cargo.toml  README.md
circuit_component_macro/src/: gen_bn_wrapper.rs  gen_wrapper.rs  lib.rs
circuit_component_macro/tests/: integration.rs
examples/: groth16_gc_gate_count.rs  pairing_gate_counts.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fq.rs
g16/: Cargo.toml
g16/src/: main.rs  slab.rs
g16/src/modes/: credit.rs  mod.rs  translate.rs
g16check/: Cargo.toml
g16check/src/: main.rs
g16ckt/: Cargo.toml
g16ckt/examples/: pairing_gate_counts.rs
g16ckt/src/circuit/: arity_check.rs
g16ckt/src/gadgets/: groth16.rs
g16ckt/src/gadgets/bn254/: final_exponentiation.rs  fq.rs  fq2.rs  g1.rs  g2.rs  pairing.rs
g16gen/: Cargo.toml  README.md
g16gen/src/: cache.rs  dummy_circuit.rs  main.rs  proof_setup.rs  u24.rs
g16gen/src/modes/: fanout_ctr.rs  mod.rs  translate.rs
g16gen/src/passes/: credits.rs  input_bits.rs  mod.rs  translation.rs
src/: credits.rs  lib.rs  main.rs  translator.rs
src/circuit/: arity_check.rs  mod.rs  modes.rs
src/circuit/modes/: credit_collection_mode.rs  translate_mode.rs
src/gadgets/: g16_dump.rs  mod.rs
verify/: Cargo.toml
verify/src/: main.rs
