[package]
name = "g16gen"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
ckt = { version = "0.1.0", git = "https://github.com/alpenlabs/ckt" }
garbled-snark-verifier = { git = "https://github.com/bitvm/garbled-snark-verifier", version = "0.2.0" }
indicatif = "0.18.0"
lvl = { git = "https://github.com/alpenlabs/ckt", version = "0.1.0" }
rand = "0.8"
rand_chacha = "0.3"
roaring = "0.11.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[features]
nightly = ["roaring/simd"]
