[package]
name = "circuit_component_macro"
version = "0.1.0"
edition = "2024"
authors = ["BitVM Alliance"]
license = "GPL-3.0-only"
repository = "https://github.com/alpenlabs/g16ckt"
rust-version = "1.90"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
