[package]
name = "g16ckt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1",  features = ["derive"] }
libfuzzer-sys = { version = "0.4.0"}
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
num-bigint = { version = "0.4", features = ["rand"] }


[dependencies.g16ckt]
path = ".."

[[bin]]
name = "fuzz_target_fq"
path = "fuzz_targets/fq.rs"
test = false
doc = false
bench = false


